# conan_sandbox

./: .gitignore
build_scripts/conan/: conanfile.py  conanfile.txt
build_scripts/conan/profiles/: msvc16_debug_md  msvc16_release_md  rhel8_c++11  rhel8_c++17
build_scripts/project/: CMakeLists.txt  build.bat  build.sh
source/messages/: CMakeLists.txt  example_msg.proto
source/project_exe/: CMakeLists.txt  a_class.hpp  b_class.cpp  b_class.h  main.cpp
source/project_lib/: CMakeLists.txt  lib.cpp  lib.h
source/project_lib/internal_subproject/: class_x.cpp  class_x.h
